--- a/roles/services/gitea/defaults/main.yml
+++ b/roles/services/gitea/defaults/main.yml
@@ -17,11 +17,9 @@ gitea_db_password: "{{ postgres_password }}"
 postgres_data_path: "{{ data_root }}/postgres-gitea"
 postgres_version: "14"
 
-
-
 # Gitea Actions configuration
 gitea_actions_enabled: true
-gitea_actions_network_name: "gitea_network"  # Use the same network
+gitea_actions_network_name: "gitea_network"
 gitea_runner_version: "latest"
 gitea_runner_name: "gitea-runner"
 gitea_runner_data_path: "{{ data_root }}/gitea_runner"
