gitea-runner with ruby runner allowing 2 minute builds

--- a/roles/services/gitea/defaults/main.yml
+++ b/roles/services/gitea/defaults/main.yml
@@ -23,4 +23,4 @@ gitea_actions_network_name: "gitea_network"
 gitea_runner_version: "latest"
 gitea_runner_name: "gitea-runner"
 gitea_runner_data_path: "{{ data_root }}/gitea_runner"
-gitea_runner_labels: "ubuntu-latest:docker://node:18-bullseye,ubuntu-22.04:docker://node:18-bullseye,ubuntu-20.04:docker://node:16-bullseye"
+gitea_runner_labels: "ruby-3.4.2:docker://cimg/ruby:3.4.2-node,ubuntu-latest:docker://node:18-bullseye,ubuntu-22.04:docker://node:18-bullseye,ubuntu-20.04:docker://node:16-bullseye"
