--- a/roles/services/logseq/tasks/main.yml
+++ b/roles/services/logseq/tasks/main.yml
@@ -1,4 +1,10 @@
 ---
+- name: Install passlib for htpasswd module
+  pip:
+    name: passlib
+    state: present
+  become: yes
+
 - name: Ensure Logseq data directory exists
   file:
     path: "{{ logseq_data_path }}"
@@ -7,9 +13,40 @@
 
 - name: Ensure Logseq config directory exists
   file:
-    path: "{{ logseq_config_path }}"
+    path: "{{ logseq_config_path }}/config"
     state: directory
     mode: '0755'
+
+- name: Create htpasswd directory
+  file:
+    path: "{{ logseq_config_path }}/auth"
+    state: directory
+    mode: '0755'
+
+- name: Generate htpasswd file
+  htpasswd:
+    path: "{{ logseq_config_path }}/auth/users.htpasswd"
+    name: "{{ logseq_auth_username }}"
+    password: "{{ logseq_auth_password }}"
+    owner: "{{ puid }}"
+    group: "{{ pgid }}"
+    mode: '0600'
+
+- name: Generate hashed password
+  set_fact:
+    logseq_auth_password_hash: "{{ logseq_auth_password | password_hash('bcrypt') }}"
+
+- name: Ensure Traefik dynamic config directory exists
+  file:
+    path: "{{ traefik_dynamic_config_dir }}"
+    state: directory
+    mode: '0755'
+
+- name: Create Traefik dynamic config for Logseq auth
+  template:
+    src: ../templates/logseq-auth.yml.j2
+    dest: "{{ traefik_dynamic_config_dir }}/logseq-auth.yml"
+    mode: '0644'
 
 - name: Make sure the logseq container is created and running
   docker_container:
@@ -31,6 +68,8 @@
       traefik.http.routers.logseq-secure.tls: "true"
       traefik.http.routers.logseq-secure.service: "logseq"
       traefik.http.services.logseq.loadbalancer.server.port: "80"
+      # Use the dynamic config middleware
+      traefik.http.routers.logseq-secure.middlewares: "logseq-auth@file"
     pull: yes
     state: 'started'
     env:
@@ -39,5 +78,5 @@
       TZ: "{{ timezone }}"
     volumes:
       - "{{ logseq_data_path }}:/app/public/data"
-      - "{{ logseq_config_path }}:/app/public/config"
+      - "{{ logseq_config_path }}/config:/app/public/config"
     restart_policy: unless-stopped
