docker containers should be recreated

--- a/roles/arr/lidarr/tasks/main.yml
+++ b/roles/arr/lidarr/tasks/main.yml
@@ -9,6 +9,7 @@
       - 8686:8686
     pull: yes
     state: started
+    recreate: yes
     env:
       PUID: "{{ puid }}"
       PGID: "{{ pgid }}"
