--- a/roles/arr/radarr/tasks/main.yml
+++ b/roles/arr/radarr/tasks/main.yml
@@ -9,6 +9,7 @@
       - 7878:7878
     pull: yes
     state: 'started'
+    recreate: yes
     env:
       PUID: "{{ puid }}"
       PGID: "{{ pgid }}"
