--- a/roles/arr/sonarr/tasks/main.yml
+++ b/roles/arr/sonarr/tasks/main.yml
@@ -9,6 +9,7 @@
       - 8989:8989
     pull: yes
     state: 'started'
+    recreate: yes
     env:
       PUID: "{{ puid }}"
       PGID: "{{ pgid }}"
