--- a/roles/arr/tdarr/tasks/main.yml
+++ b/roles/arr/tdarr/tasks/main.yml
@@ -16,6 +16,7 @@
       - 8268:8268 # Example extra node port
     pull: yes
     state: 'started'
+    recreate: yes
     env:
       PUID: "{{ puid }}"
       PGID: "{{ pgid }}"
