--- a/roles/home-automation/esphome/tasks/main.yml
+++ b/roles/home-automation/esphome/tasks/main.yml
@@ -17,4 +17,5 @@
       - /etc/localtime:/etc/localtime:ro
       - "{{ config_root }}/esphome_config:/config"
     state: 'started'
+    recreate: yes
     restart_policy: unless-stopped
