--- a/roles/monitor/grafana/tasks/main.yml
+++ b/roles/monitor/grafana/tasks/main.yml
@@ -18,6 +18,7 @@
       - "3000:3000"
     pull: yes
     state: 'started'
+    recreate: yes
     env:
       PUID: "{{ puid }}"
       PGID: "{{ pgid }}"
