--- a/roles/services/audiobookshelf/tasks/main.yml
+++ b/roles/services/audiobookshelf/tasks/main.yml
@@ -8,6 +8,7 @@
     ports:
       - "13378:80"
     pull: yes
+    recreate: yes
     state: 'started'
     env:
       PUID: "{{ puid }}"
@@ -18,14 +19,14 @@
     labels:
       traefik.enable: "true"
       traefik.http.routers.audiobookshelf.entrypoints: "http"
-      traefik.http.routers.audiobookshelf.rule: "Host(`audiobooks.{{ domain }}`)||Host(`audiobooks-in.{{ domain }}`)"
+      traefik.http.routers.audiobookshelf.rule: "Host(`audiobooks.{{ domain }}`)"
       traefik.http.middlewares.audiobookshelf-https-redirect.redirectscheme.scheme: "https"
       traefik.http.routers.audiobookshelf.middlewares: "audiobookshelf-https-redirect"
       traefik.http.routers.audiobookshelf-secure.entrypoints: "https"
-      traefik.http.routers.audiobookshelf-secure.rule: "Host(`audiobooks.{{ domain }}`)||Host(`audiobooks-in.{{ domain }}`)"
+      traefik.http.routers.audiobookshelf-secure.rule: "Host(`audiobooks.{{ domain }}`)"
       traefik.http.routers.audiobookshelf-secure.tls: "true"
       traefik.http.routers.audiobookshelf-secure.service: "audiobookshelf"
-      traefik.http.services.audiobookshelf.loadbalancer.server.url: "http://vault.local:13378"
+      traefik.http.services.audiobookshelf.loadbalancer.server.port: "80"
       traefik.http.middlewares.sslheader.headers.customrequestheaders.X-Forwarded-Proto: "https" 
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
