--- a/roles/services/calibre/tasks/main.yml
+++ b/roles/services/calibre/tasks/main.yml
@@ -10,6 +10,7 @@
       - "8091:8081"
     pull: yes
     state: 'started'
+    recreate: yes
     env:
       PUID: "{{ puid }}"
       PGID: "{{ pgid }}"
@@ -32,6 +33,7 @@
       - "8093:8083"
     pull: yes
     state: 'started'
+    recreate: yes
     env:
       PUID: "{{ puid }}"
       PGID: "{{ pgid }}"
