--- a/roles/services/ubooquity/tasks/main.yml
+++ b/roles/services/ubooquity/tasks/main.yml
@@ -11,6 +11,7 @@
       - "2203:2203"
     pull: yes
     state: 'started'
+    recreate: yes
     env:
       PUID: "{{ puid }}"
       PGID: "{{ pgid }}"
