--- a/roles/arr/bazarr/tasks/main.yml
+++ b/roles/arr/bazarr/tasks/main.yml
@@ -9,6 +9,7 @@
       - 6767:6767
     pull: yes
     state: 'started'
+    recreate: yes
     env:
       PUID: "{{ puid }}"
       PGID: "{{ pgid }}"
