--- a/roles/arr/prowlarr/tasks/main.yml
+++ b/roles/arr/prowlarr/tasks/main.yml
@@ -9,6 +9,7 @@
       - 9696:9696
     pull: yes
     state: started
+    recreate: yes
     env:
       PUID: "{{ puid }}"
       PGID: "{{ pgid }}"
