--- a/roles/home-automation/nodered/tasks/main.yml
+++ b/roles/home-automation/nodered/tasks/main.yml
@@ -16,4 +16,5 @@
       - /etc/localtime:/etc/localtime:ro
       - "{{ config_root }}/nodered_config:/data"
     state: 'started'
+    recreate: yes
     restart_policy: unless-stopped
