--- a/roles/services/cloudflared/tasks/main.yml
+++ b/roles/services/cloudflared/tasks/main.yml
@@ -8,6 +8,7 @@
     pull: yes
     # attempting to recreate docker run cloudflare/cloudflared:latest tunnel --no-autoupdate run --token <TOKEN>
     state: 'started'
+    recreate: yes
     env:
       PUID: "{{ puid }}"
       PGID: "{{ pgid }}"
