--- a/roles/services/kavita/tasks/main.yml
+++ b/roles/services/kavita/tasks/main.yml
@@ -9,6 +9,7 @@
       - "5000:5000"
     pull: yes
     state: 'started'
+    recreate: yes
     env:
       PUID: "{{ puid }}"
       PGID: "{{ pgid }}"
