--- a/roles/services/watchtower/tasks/main.yml
+++ b/roles/services/watchtower/tasks/main.yml
@@ -10,6 +10,7 @@
       - "3080:3080"
     pull: yes
     state: 'started'
+    recreate: yes
     env:
       PUID: "{{ puid }}"
       PGID: "{{ pgid }}"
