dns fixes with pihole

--- a/roles/arr/bazarr/tasks/main.yml
+++ b/roles/arr/bazarr/tasks/main.yml
@@ -5,6 +5,8 @@
     name: bazarr
     networks:
       - name: media_network
+    dns_servers:
+      - "{{ server_ip }}"  # Pi-hole server
     ports:
       - 6767:6767
     pull: yes
