--- a/roles/arr/lidarr/tasks/main.yml
+++ b/roles/arr/lidarr/tasks/main.yml
@@ -5,6 +5,8 @@
     name: lidarr
     networks:
       - name: media_network
+    dns_servers:
+      - "{{ server_ip }}"  # Pi-hole server
     ports:
       - 8686:8686
     pull: yes
