--- a/roles/media/jellyfin/tasks/main.yml
+++ b/roles/media/jellyfin/tasks/main.yml
@@ -22,6 +22,9 @@
       - 8096:8096
     networks:
       - name: proxy
+    dns_servers:
+      - "1.1.1.1"
+      - "8.8.8.8"
     labels:
       traefik.enable: "true"
       traefik.http.routers.jellyfin.entrypoints: "http"
