--- a/roles/arr/transmission-openvpn/tasks/main.yml
+++ b/roles/arr/transmission-openvpn/tasks/main.yml
@@ -15,6 +15,8 @@
     pull: yes
     networks:
       - name: media_network
+    dns_servers:
+      - "{{ server_ip }}"  # Pi-hole server
     state: started
     recreate: yes
     devices:
