--- a/roles/services/nextcloud/tasks/main.yml
+++ b/roles/services/nextcloud/tasks/main.yml
@@ -28,6 +28,8 @@
       - "8080:80"
     networks:
       - name: proxy
+    dns_servers:
+      - "{{ server_ip }}"  # Pi-hole server
     labels:
       traefik.enable: "true"
       traefik.http.routers.nextcloud.entrypoints: "http"
